# backend/src/routes/authRoutes.ts
@@ -7,13 +7,15 @@ import {
   loginWithGoogle,
   register,
   sendNewVerifyEmail,
-  verifyEmail
+  verifyEmail,
+  checkVerificationStatus
 } from "../controllers/authController";
 
 const router = express.Router();
 router.post("/register", register);
 router.post("/verify-email", verifyEmail); // app password
 router.post("/new-verify", sendNewVerifyEmail);
+router.post("/check-verification", checkVerificationStatus);
 router.post("/login", login);
 router.post("/login-google", loginWithGoogle);
 router.post("/login-admin", loginAdmin);
